--- a/.github/workflows/bump-formula-pr.yml
+++ b/.github/workflows/bump-formula-pr.yml
@@ -9,17 +9,6 @@ jobs:
   bump-formula-version:
     runs-on: ubuntu-latest
     steps:
-      - run: gh pr create -B main -H ${{github.ref_name}} --title '' --body 'Created by Github action'
+      - run: gh pr create -B main -H ${{github.ref_name}} --fill --reviewer ${{github.repository_owner}} -l bump-formula-pr
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # - uses: actions/checkout@v4
-      # # - name: Update Formula version
-      # #   run: ./bin/update-formula-version.sh "Formula/${{inputs.NAME}}.rb" "${{inputs.VERSION}}"
-      # - name: Create Pull Request
-      #   uses: peter-evans/create-pull-request@v6
-      #   with:
-      #     # commit-message: "fix(${{inputs.NAME}}): updated to ${{inputs.VERSION}}"
-      #     # title: "fix(${{inputs.NAME}}): updated to ${{inputs.VERSION}}"
-      #     # body: |
-      #     #   Version in Formula/${{inputs.NAME}}.rb updated by [.github/workflows/bump-formula-version.yml](.github/workflows/bump-formula-version.yml)
-      #     branch: ${{github.ref_name}}
