fill --> fill-first
Signed-off-by: Justen Stall <justen.stall@udri.udayton.edu>

--- a/.github/workflows/bump-formula-pr.yml
+++ b/.github/workflows/bump-formula-pr.yml
@@ -10,6 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: gh pr create -B main -H ${{github.ref_name}} --fill --reviewer ${{github.repository_owner}} -l bump-formula-pr
+      - run: gh pr create -B main -H ${{github.ref_name}} --fill-first --reviewer ${{github.repository_owner}} -l bump-formula-pr
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
