--- a/.github/workflows/bump-formula-pr.yml
+++ b/.github/workflows/bump-formula-pr.yml
@@ -1,5 +1,3 @@
-name: Bump Formula version
-
 on:
   push:
     branches:
@@ -9,7 +7,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  bump-formula-version:
+  bump-formula-pr:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -17,6 +15,7 @@ jobs:
       # https://github.com/cli/cli/issues/5896#issuecomment-1780072370
       - run: git fetch origin main
       - run: git fetch origin ${{github.ref_name}}
-      - run: gh pr create -B main -H ${{github.ref_name}} --fill --reviewer justenstall -l bump-formula-pr
+      - run: 
+      - run: gh pr create -B main -H ${{github.ref_name}} --fill-first --reviewer justenstall -l bump-formula-pr
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
