fix busted job step
Signed-off-by: Justen Stall <justen.stall@udri.udayton.edu>

--- a/.github/workflows/bump-formula-pr.yml
+++ b/.github/workflows/bump-formula-pr.yml
@@ -15,7 +15,7 @@ jobs:
       # https://github.com/cli/cli/issues/5896#issuecomment-1780072370
       - run: git fetch origin main
       - run: git fetch origin ${{github.ref_name}}
-      - run: 
+      # - run: 
       - run: gh pr create -B main -H ${{github.ref_name}} --fill-first --reviewer justenstall -l bump-formula-pr
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
