--- a/.github/workflows/bump-formula-pr.yml
+++ b/.github/workflows/bump-formula-pr.yml
@@ -16,6 +16,6 @@ jobs:
       - run: git fetch origin main
       - run: git fetch origin ${{github.ref_name}}
       # - run: 
-      - run: gh pr create -B main -H ${{github.ref_name}} --fill-first --reviewer justenstall -l bump-formula-pr
+      - run: gh pr create -B main -H ${{github.ref_name}} --fill --reviewer justenstall -l bump-formula-pr
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
