fix wrong slash kind in bump-formula-pr workflow
Signed-off-by: Justen Stall <justen.stall@udri.udayton.edu>

--- a/.github/workflows/bump-formula-pr.yml
+++ b/.github/workflows/bump-formula-pr.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Check for existing PR
         id: check
         run: |
-          prs=$(gh pr list |
+          prs=$(gh pr list \
             --repo ${{github.repositoryUrl}} \
             --head ${{github.ref_name}} \
             --base main \
