--- a/.github/workflows/bump-formula-pr.yml
+++ b/.github/workflows/bump-formula-pr.yml
@@ -25,6 +25,7 @@ jobs:
             --json title \
             --jq 'length')
           if ((prs > 0)); then
+            echo "Existing PR found: $prs"
             echo "exists=true" >> "$GITHUB_OUTPUT"
           fi
   create-pr:
